--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ POSTGRES_PORT=5432
 DEBUG=on
 SECRET_KEY=lr)+oNaJk=G_o&yIt!xx!4+rdfKYVRqn2Jrd4Zebof2badcSwh
 TIMEZONE=Asia/Almaty
+EXCHANGE_RATE_URL=https://www.nationalbank.kz/rss/get_rates.cfm
+PROJECT_URL=http://localhost:8000
