--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,15 @@
 #
 
 -i https://pypi.org/simple
+amqp==5.1.1; python_version >= '3.6'
 asgiref==3.5.2
 attrs==21.4.0
+billiard==3.6.4.0
+celery==5.2.7
+click-didyoumean==0.3.0; python_full_version >= '3.6.2' and python_full_version < '4.0.0'
+click-plugins==1.1.1
+click-repl==0.2.0
+click==8.1.3; python_version >= '3.7'
 django-cors-headers==3.12.0
 django-environ==0.8.1
 django-filter==21.1
@@ -19,11 +26,16 @@ drf-spectacular==0.22.1
 gunicorn==20.1.0
 inflection==0.5.1
 jsonschema==4.5.1
+kombu==5.2.4; python_version >= '3.7'
+prompt-toolkit==3.0.30; python_full_version >= '3.6.2'
 psycopg2-binary==2.9.3
 pyjwt==2.4.0
 pyrsistent==0.18.1
 pytz==2022.1
 pyyaml==6.0
-setuptools==64.0.0; python_version >= '3.7'
+setuptools==64.0.1; python_version >= '3.7'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.2
 uritemplate==4.1.1
+vine==5.0.0; python_version >= '3.6'
+wcwidth==0.2.5
