--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ SECRET_KEY=lr)+oNaJk=G_o&yIt!xx!4+rdfKYVRqn2Jrd4Zebof2badcSwh
 TIMEZONE=Asia/Almaty
 EXCHANGE_RATE_URL=https://www.nationalbank.kz/rss/get_rates.cfm
 PROJECT_URL=http://localhost:8000
+REDIS_HOST=redis
+REDIS_PORT=6379
