--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ async-timeout==4.0.2; python_version >= '3.6'
 attrs==21.4.0
 billiard==3.6.4.0
 celery==5.2.7
+certifi==2022.6.15; python_version >= '3.6'
+charset-normalizer==2.1.0; python_version >= '3.6'
 click-didyoumean==0.3.0; python_version < '4' and python_full_version >= '3.6.2'
 click-plugins==1.1.1
 click-repl==0.2.0
@@ -27,6 +29,7 @@ djangorestframework==3.13.1
 drf-errors-formatter==1.0.1
 drf-spectacular==0.22.1
 gunicorn==20.1.0
+idna==3.3; python_version >= '3.5'
 inflection==0.5.1
 jsonschema==4.5.1
 kombu==5.2.4; python_version >= '3.7'
@@ -39,10 +42,12 @@ pyrsistent==0.18.1
 pytz==2022.1
 pyyaml==6.0
 redis==4.3.4; python_version >= '3.6'
+requests==2.28.1
 setuptools==64.0.1; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.2
 uritemplate==4.1.1
+urllib3==1.26.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
 vine==5.0.0; python_version >= '3.6'
 wcwidth==0.2.5
 wrapt==1.14.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
