--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ amqp==5.1.1; python_version >= '3.6'
 asgiref==3.5.2
 async-timeout==4.0.2; python_version >= '3.6'
 attrs==21.4.0
+beautifulsoup4==4.11.1
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.6.15; python_version >= '3.6'
@@ -33,6 +34,7 @@ idna==3.3; python_version >= '3.5'
 inflection==0.5.1
 jsonschema==4.5.1
 kombu==5.2.4; python_version >= '3.7'
+lxml==4.9.1
 packaging==21.3; python_version >= '3.6'
 prompt-toolkit==3.0.30; python_full_version >= '3.6.2'
 psycopg2-binary==2.9.3
@@ -43,8 +45,9 @@ pytz==2022.1
 pyyaml==6.0
 redis==4.3.4; python_version >= '3.6'
 requests==2.28.1
-setuptools==64.0.1; python_version >= '3.7'
+setuptools==64.0.2; python_version >= '3.7'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+soupsieve==2.3.2.post1; python_version >= '3.6'
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.11; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
