--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ DEBUG=on
 SECRET_KEY=lr)+oNaJk=G_o&yIt!xx!4+rdfKYVRqn2Jrd4Zebof2badcSwh
 TIMEZONE=Asia/Almaty
 EXCHANGE_RATE_URL=https://www.nationalbank.kz/rss/get_rates.cfm
-PROJECT_URL=http://localhost:8000
+PROVIDER_A_URL=http://localhost:8000/api/v1/provider_a/search/
+PROVIDER_B_URL=http://localhost:8000/api/v1/provider_b/search/
 REDIS_HOST=redis
 REDIS_PORT=6379
