--- a/Pipfile
+++ b/Pipfile
@@ -29,6 +29,9 @@ django-redis = "*"
 requests = "*"
 beautifulsoup4 = "*"
 lxml = "*"
+redis = "*"
+kombu = "*"
+django-celery-beat = "*"
 
 [dev-packages]
 
